<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileCodeChallenge</string>
    <string name="login_dropbox">Log into Dropbox</string>
    <string name="display_image_list">Show Photos</string>
    <string name="take_photo">Take Photo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	<string name="Recording">Android Audio Recording Application</string>
   	<string name="Record">Record</string>
   	<string name="stop">stop</string>
   	<string name="Upload">Upload</string>

</resources>
