<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <ListView
       android:id="@+id/audio_file_listview"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/audio_record_button" >

   </ListView>

   <Button
       android:id="@+id/audio_upload_button"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/audio_record_button"
       android:layout_alignBottom="@+id/audio_record_button"
       android:layout_alignRight="@+id/audio_file_listview"
       android:text="@string/Upload" />

   <Button
       android:id="@+id/audio_record_stop_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/audio_record_button"
       android:layout_alignBottom="@+id/audio_record_button"
       android:layout_centerHorizontal="true"
       android:text="@string/stop" />

   <Button
       android:id="@+id/audio_record_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:text="@string/Record" />

</RelativeLayout>
