<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context="com.gautam.mobilecodechallenge.LoginActivity" >

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/login_dropbox" />

    <Button
        android:id="@+id/record_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Record Audio" />

    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/record_audio_button"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignRight="@+id/record_audio_button"
        android:layout_below="@+id/record_audio_button"
        android:text="@string/take_photo" />

    <Button
        android:id="@+id/show_photos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/take_photo_button"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/take_photo_button"
        android:layout_below="@+id/take_photo_button"
        android:text="@string/display_image_list" />

</RelativeLayout>
